# csv2qr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
example/: example.csv
src/: lib.rs  main.rs
